# twstock-rs

./: Cargo.toml  readme.md
.github/: master.yml
.github/workflows/: master.yml
src/: history.rs  lib.rs  realtime.rs
src/list/: mod.rs  parser.rs
test/: C_public.jsp.html.small  big5.test
